--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- 
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Club Penguin tribute page</title>
 
-Hello Camper!
+</head>
 
-For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
+<body>
+	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+	<main id="main">
+		<h1 id="title">Club Penguin</h1>
+		<div id="img-div"><img id="image" src="https://pmcvariety.files.wordpress.com/2020/05/club-penguin-online-shut-down.png?w=600"/>
+			<p id="img-caption">Club Penguin</p>
+		</div>
+		<p id="tribute-info">Club Penguin</p>
+		<a id="tribute-link" href="https://en.wikipedia.org/wiki/Club_Penguin" target="_blank">Club Penguin Wiki</a>
+	</main>
+</body>
 
-- The freeCodeCamp Team 
-
--->
-hhhhhhhh
+</html>
