--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Club Penguin tribute page</title>
+	<title>Alan Rickman tribute page</title>
 
 </head>
 
 <body>
 	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 	<main id="main">
-		<h1 id="title">Club Penguin</h1>
-		<div id="img-div"><img id="image" src="https://pmcvariety.files.wordpress.com/2020/05/club-penguin-online-shut-down.png?w=600"/>
-			<p id="img-caption">Club Penguin</p>
+		<h1 id="title">Alan Rickman</h1>
+		<div id="img-div"><img id="image" src="https://upload.wikimedia.org/wikipedia/commons/9/98/AlanRickmanDec2009.jpg"/>
+			<p id="img-caption">Alan Rickman at a Hudson Union Society event in December 2009</p>
 		</div>
-		<p id="tribute-info">Club Penguin</p>
-		<a id="tribute-link" href="https://en.wikipedia.org/wiki/Club_Penguin" target="_blank">Club Penguin Wiki</a>
+		<p id="tribute-info">Alan Rickman text</p>
+		<a id="tribute-link" href="https://en.wikipedia.org/wiki/Alan_Rickman" target="_blank">Alan Rickman Wiki</a>
 	</main>
 </body>
 
