--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<div id="img-div"><img id="image" src="https://upload.wikimedia.org/wikipedia/commons/9/98/AlanRickmanDec2009.jpg"/>
 			<p id="img-caption">Alan Rickman at a Hudson Union Society event in December 2009</p>
 		</div>
-		<p id="tribute-info">Alan Rickman text</p>
+		<h2 id="tribute-info"><b>Alan Sidney Patrick Rickman</b> (21 February 1946 – 14 January 2016) was an English actor and director.</h2>
+    <p>
 		<a id="tribute-link" href="https://en.wikipedia.org/wiki/Alan_Rickman" target="_blank">Alan Rickman Wiki</a>
 	</main>
 </body>
