--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 	<main id="main">
 		<h1 id="title">Alan Rickman</h1>
-		<div id="img-div"><img id="image" src="https://upload.wikimedia.org/wikipedia/commons/9/98/AlanRickmanDec2009.jpg"/>
-			<p id="img-caption">Alan Rickman at a Hudson Union Society event in December 2009</p>
+		<div id="img-div"><img id="image" src="https://upload.wikimedia.org/wikipedia/commons/5/50/Alan_Rickman_cropped_and_retouched.jpg"/>
+			<p id="img-caption">Alan Rickman at the John Golden Theater in 2011</p>
 		</div>
 		<h2 id="tribute-info"><b>Alan Sidney Patrick Rickman</b> (21 February 1946 – 14 January 2016) was an English actor and director.</h2>
     <p>
-		<a id="tribute-link" href="https://en.wikipedia.org/wiki/Alan_Rickman" target="_blank">Alan Rickman Wiki</a>
-	</main>
+	<h2>Few facts about Alan Rickman</h2>
+    <ul>
+      <li>Alan Rickman’s first career was as an artist. After studying graphic design at Chelsea College of Art and Design, followed by graduate classes at the Royal College of Art, he and a few friends launched their own graphic design business, Graphitti.</li>
+      <br>
+      <li>Though he found success in the graphic design world, Rickman admitted that, “theater was always lurking in the background.” So, while still working as a graphic designer, he sent a letter to the Royal Academy of Dramatic Art to request an audition.</li>
+      <br>
+      <li>In The Making of Return of the Jedi, author J.W. Rinzler revealed that Rickman auditioned for the role of Admiral Moff Jerjerrod, who oversaw the construction of the second Death Star. The role ultimately went to Michael Pennington.</li><br>
+      <li>In 2008, a pair of researchers—linguist Andrew Linn and sound engineer Shannon Harris—were tasked with analyzing voice samples from more than 50 people to determine what makes the perfect human voice.</li>
+    </ol>
+    <br>
+    <p>More info about <a id="tribute-link" href="https://en.wikipedia.org/wiki/Alan_Rickman" target="_blank">Alan Rickman</a>
+	</main></p>
 </body>
 
 </html>
